# chat_server_rs

./: Cargo.toml  README.md
src/: main.rs
src/client/: core.rs  gui.rs  mod.rs
src/server/: core.rs  mod.rs
src/shared/: config.rs  message.rs  mod.rs  utils.rs
