[package]
name = "chat_server_rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}

druid = "0.7"

bincode = "1"

gtk = "0.9.0"

tokio = { version = "1", features = ["full"] }

futures = "0.3"

glib = "0.10.3"

im = "15.0"

druid-derive = "0.5.1"

